--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
     <div id="output">
     </div>
-    <script src=""></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
