enhanced style, corrected map link, and removed waiting msg.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="">
+    <title>Geolocation</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <div id="wrapper">
+    <h3>Geolocation with Canvas</h3>
+    <p id= "waitMsg">Please wait while we load details of your location...</p>
     <div id="output">
+    </div>
+     <p>gere0018</p>
     </div>
     <script src="js/script.js"></script>
 </body>
